Lots of bug fixes.
Performance improvements.
Major restructure of admin UI.
Workflow form detached from comment form.
Workflow status and form are fields that can be controlled under "Manage display."

Issue #1783854 by antojose: Allow setting comment in Rules.
Issue #1891446 by interX: Allow grouped filters.
Issue #1922262 by NancyDru, hwold: Fix join. misc. improvements.
Issue #1540824 by NancyDru: Improve Admin UI. Issue #1908520 by NancyDru: Set state of pre-existing nodes.
Issue #1922422 by NancyDru: Correct state name creation in Tokens.
Issue #155547 by NancyDru: Tab form should call hook_workflow().
Issue #1818424 by NancyDru: Add doc for hook_workflow_operations.
Issue #1918424 by NancyDru: More complete api doc.
Get rid of temp.patch.
Issue #385038 by flyingkiki, NancyDru: Fix double history. Minor corrections.
Issue #1802216 by NancyDru: Improve scheduling time form section.
Issue #1418622 by NancyDru: Fix tokens during transition.
Issue #1784092 by wamilton: stop double saving nodes.
remove accidental file
Issue #1900488 by NancyDru: load comment in node_load. #1904740 by NancyDru: suppress form at terminal state. Performance improvements.
Issue #1532646 by wonder95: Add search api module.
Issue #1493012 by kid_icarus: Better views.
Issue #1900480 by NancyDru for Dave Reid: Move tokens stuff to separate file.
Issue #1418622 by Dave Reid: Fix tokens.
Issue #1427006 by NancyDru: Fix transition rule.
Issue #1893542 by NancyDru: Transition form by perms.
Issue #1893724 by NancyDru: transition form by perms.
Issue #1895712 by NancyDru: Fix form when only one state.
Issue #1896422 by NancyDru: Fix token message.
Correct theming in form.
Minor corrections to README
Issue #1856180 by NancyDru: Correct update to not fail.
Issue #1475930 by Bastlynn.
Issue #1874400 by Nancydru.
Issue #1884630 by NancyDru.
Issue #1891374 by NancyDru.
Coder finds.
Issue #1550274 by dynamicdan, gofs: egregious typo