@@ -1,9 +1,25 @@
 <?php
-
 /**
  * @file
  *   Provides node access permissions based on workflow states.
  */
+
+/**
+ * Implements hook_menu().
+ */
+function workflow_access_menu() {
+  $items = array();
+
+  $items["admin/config/workflow/access"] = array(
+    'title' => 'Access',
+    'access arguments' => array('administer workflow'),
+    'page callback' => 'drupal_get_form',
+    'page arguments' => array('workflow_access_form'),
+    'type' => MENU_CALLBACK,
+    );
+
+  return $items;
+}
 
 /**
  * Implements hook_node_grants().
@@ -59,25 +75,51 @@ function workflow_access_node_access_explain($row) {
 }
 
 /**
- * Implements hook_form_alter().
+ * Implements hook_workflow_operations().
+ * Create action link for access form.
+ */
+function workflow_access_workflow_operations($op, $workflow = NULL, $state = NULL) {
+  switch ($op) {
+    case 'workflow':
+      $actions = array(
+        'workflow_access_form' => array(
+          'title' => t('Access'),
+          'href' => "admin/config/workflow/access/$workflow->wid",
+          ),
+        );
+
+      return $actions;
+  }
+}
+
+/**
+ * Implements hook_form().
  *
  * Add a "three dimensional" (state, role, permission type) configuration
  * interface to the workflow edit form.
  */
-function workflow_access_form_workflow_admin_ui_edit_form_alter(&$form, $form_state) {
+function workflow_access_form($form, $form_state, $wid = 0) {
+  if ($workflow = workflow_get_workflows_by_wid($wid)) {
+    drupal_set_title(t('@name Access', array('@name' => $workflow->name)));
+  }
+  else {
+    drupal_set_message(t('Unknown workflow'));
+    drupal_goto('admin/config/workflow/workflow');
+  }
+
+  $form = array('#tree' => TRUE);
+  
+  $form['#wid'] = $wid;
+
   // A list of roles available on the site and our
   // special -1 role used to represent the node author.
-  $rids = user_roles();
+  $rids = user_roles(FALSE, 'participate in workflow');
+
   $rids['-1'] = t('author');
-  $form['workflow_access'] = array(
-    '#type' => 'fieldset',
-    '#title' => t('Access control'),
-    '#collapsible' => TRUE,
-    '#tree' => TRUE,
-  );
+
   // Add a table for every workflow state.
   $options = array('status' => 1);
-  foreach (workflow_get_workflow_states_by_wid($form['wid']['#value'], $options) as $state) {
+  foreach (workflow_get_workflow_states_by_wid($wid, $options) as $state) {
     if ($state->state == t('(creation)')) {
       // No need to set perms on creation.
       continue;
@@ -102,27 +144,31 @@ function workflow_access_form_workflow_admin_ui_edit_form_alter(&$form, $form_st
       $view = array(DRUPAL_ANONYMOUS_RID, DRUPAL_AUTHENTICATED_RID);
     }
     // TODO better tables using a #theme function instead of direct #prefixing
-    $form['workflow_access'][$state->sid] = array(
+    $form[$state->sid] = array(
       '#type' => 'fieldset',
       '#title' => t('@state', array('@state' => $state->state)),
       '#collapsible' => TRUE,
+      '#collapsed' => FALSE,
       '#tree' => TRUE,
-    );
-    $form['workflow_access'][$state->sid]['view'] = array(
+      );
+
+    $form[$state->sid]['view'] = array(
       '#type' => 'checkboxes',
       '#options' => $rids,
       '#default_value' => $view,
       '#title' => t('Roles who can view posts in this state'),
       '#prefix' => '<table width="100%" style="border: 0;"><tbody style="border: 0;"><tr><td>',
-    );
-    $form['workflow_access'][$state->sid]['update'] = array(
+      );
+
+    $form[$state->sid]['update'] = array(
       '#type' => 'checkboxes',
       '#options' => $rids,
       '#default_value' => $update,
       '#title' => t('Roles who can edit posts in this state'),
       '#prefix' => "</td><td>",
-    );
-    $form['workflow_access'][$state->sid]['delete'] = array(
+      );
+
+    $form[$state->sid]['delete'] = array(
       '#type' => 'checkboxes',
       '#options' => $rids,
       '#default_value' => $delete,
@@ -131,6 +177,10 @@ function workflow_access_form_workflow_admin_ui_edit_form_alter(&$form, $form_st
       '#suffix' => "</td></tr></tbody></table>",
     );
   }
+
+  $form['submit'] = array('#type' => 'submit', '#value' => t('Save configuration'));
+
+  return $form;
   // Place our block comfortably down the page.
   $form['submit']['#weight'] = 10;
   $form['#submit'][] = 'workflow_access_form_submit';
@@ -140,7 +190,7 @@ function workflow_access_form_workflow_admin_ui_edit_form_alter(&$form, $form_st
  * Store permission settings for workflow states.
  */
 function workflow_access_form_submit($form, $form_state) {
-  foreach ($form_state['values']['workflow_access'] as $sid => $access) {
+  foreach ($form_state['values'] as $sid => $access) {
     // Ignore irrelevant keys.
     if (!is_numeric($sid)) {
       continue;
@@ -156,6 +206,7 @@ function workflow_access_form_submit($form, $form_state) {
       );
       $id = workflow_access_insert_workflow_access_by_sid($data);
     }
+
     // Update all nodes having same workflow state to reflect new settings.
     foreach (workflow_get_workflow_node_by_sid($sid) as $data) {
       // Instead of trying to construct what the grants should be per node as we save.
@@ -164,7 +215,9 @@ function workflow_access_form_submit($form, $form_state) {
       node_access_acquire_grants($node);
     }
   }
+
   drupal_set_message(t('Workflow access permissions updated.'));
+  $form_state['redirect'] = 'admin/config/workflow/workflow/' . $form['#wid'];
 }
 
 /**
