@@ -1,0 +1,19 @@
+/**
+ * @file
+ * Style Sheets for the Workflow_Admin_UI module.
+ */
+ 
+#workflow_admin_ui_overview .state-name input {
+  margin-right: 2em; /* Make room for dragging handle. */
+}
+
+#workflow_admin_ui_overview .state-status {
+  text-align: center;
+}
+
+#workflow_admin_ui_overview .state-count {
+  text-align: right;
+}
+
+#workflow_admin_ui_overview th.state-ops {
+}
